# compilation-principle

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/1/: k_table  p_table  test1  test2
data/2/: 1.txt  2.txt
data/3/: 1.txt
inc/: LL_1.h  LR_1.h  Lexical_analysis.h
src/: LL_1.cpp  LR_1.cpp  Lexical_analysis.cpp
